Fixed spacing of icons in menu both expanded and collapsed

--- a/public/style/nav.css
+++ b/public/style/nav.css
@@ -67,3 +67,15 @@ header {
 .material-icons {
     font-size: 2em;
 }
+
+@media screen and (max-width: 990px) {
+    .text-link {
+        margin-top: 9px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .text-link {
+        margin-top: 0px;
+    }
+}
